[metadata]
name = claymaster-hp115
version = 0.0.1
author = Hannah Pollak
author_email = H.pollak@sms.ed.ac.uk
description = Toolkit for generating atomistic clay models
long-description=README.rst
url = https://github.com/hp115/claycode
classifiers =
    Development Status :: 3 - Alpha,
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License,
    Operating System :: POSIX :: Linux,
    Programming Language :: Python :: 3,
    Topic :: Scientific/Engineering

[options]
package_dir =
    = claycode
packages = find:
python_requires = >=3.6
include_package_data = true

[options.packages.find]
where = claycode

[wheel]
universal = 1

[build_sphinx]
all-files = 1
source-dir = doc/sphinx/source
build-dir = doc/html
warning-is-error = 1



